Improve API Keys documentation formatting
- Convert bullet lists to custom tables with consistent styling
- Add card layouts for better navigation and visual hierarchy
- Convert test information sections to structured tables
- Add icons and improve card descriptions for next steps
- Streamline content presentation and readability

--- a/faq.mdx
+++ b/faq.mdx
@@ -90,4 +90,4 @@ icon: "circle-info"
   </Accordion>
 </AccordionGroup>
 
-Still have questions? [Contact our support team](https://calendly.com/contact-hmul/schedule) or check out our [comprehensive documentation](/introduction). 
+Still have questions? [Contact our support team <Icon icon="arrow-up-right-from-square" size={12} />](https://calendly.com/contact-hmul/schedule) or check out our [comprehensive documentation](/introduction). 
