--- a/troubleshooting/ide-configuration-issues.mdx
+++ b/troubleshooting/ide-configuration-issues.mdx
@@ -58,7 +58,7 @@ If you experience issues where your **IDE doesn't recognize TestSprite MCP Serve
 
     <Tab title="Alternative Validation">
     1. Copy your configuration file content
-    2. Visit [jsonlint.com](https://jsonlint.com)
+    2. Visit [jsonlint.com <Icon icon="arrow-up-right-from-square" size={12} />](https://jsonlint.com)
     3. Paste and validate
 
     **Copy to clipboard:**
@@ -226,7 +226,7 @@ If you experience issues about **Invalid or missing API key**, please follow the
 
 <Steps>
   <Step title="Get API key">
-    - Visit [TestSprite Dashboard](https://testsprite.com/dashboard)
+    - Visit [TestSprite Dashboard <Icon icon="arrow-up-right-from-square" size={12} />](https://testsprite.com/dashboard)
     - Go to `Settings > API Keys`
     - Generate new key if needed
   </Step>
