--- a/troubleshooting/installation-issues.mdx
+++ b/troubleshooting/installation-issues.mdx
@@ -21,7 +21,7 @@ If you experience issues about **`npx @testsprite/testsprite-mcp@latest` command
         ```
       </Tab>
       <Tab title="Direct Download">
-        Download from https://nodejs.org/
+        Download from [Node.js Official Site <Icon icon="arrow-up-right-from-square" size={12} />](https://nodejs.org/)
       </Tab>
     </Tabs>
   </Step>
@@ -175,7 +175,7 @@ If you experience issues about **TestSprite MCP Server requires Node.js 22+**. P
     </Tab>
     
     <Tab title="Direct Download">
-    Visit https://nodejs.org/ and download Node.js 22 LTS
+    Visit [Node.js Official Site <Icon icon="arrow-up-right-from-square" size={12} />](https://nodejs.org/) and download Node.js 22 LTS
     
     Follow the installer instructions for your operating system.
     </Tab>
