--- a/web-portal/api-keys.mdx
+++ b/web-portal/api-keys.mdx
@@ -1,34 +1,55 @@
-# API Keys & MCP Integration
-
-Manage your TestSprite API keys in the Web Portal and view test results from MCP Server executions.
+---
+title: "API Keys & MCP Integration"
+description: "Manage your TestSprite API keys in the Web Portal and view test results from MCP Server executions."
+icon: "key"
+---
 
 ## Generating API Keys
 
 Generate API keys for MCP Server integration and other third-party tools.
 
-### Steps to Create a New API Key
+<Steps>
+  <Step title="Navigate to Settings">
+    - Go to `SETTINGS > API Keys`
+    - Click **"Generate New API Key"**
+  </Step>
 
-1. **Navigate to Settings**
-   - Go to SETTINGS → API Keys
-   - Click "Generate New API Key"
+  <Step title="Configure and Save">
+    - Provide a **descriptive name** (e.g., "MCP Integration")
+    - **Copy** the generated API key immediately
+    - **Store** it securely (it won't be shown again)
+  </Step>
+</Steps>
 
-2. **Configure and Save**
-   - Provide a descriptive name (e.g., "MCP Integration")
-   - Copy the generated API key immediately
-   - Store it securely (it won't be shown again)
-
-### Managing API Keys
+## Managing API Keys
 
 **Each API Key Shows:**
-- **Key Name** - Descriptive identifier
-- **Key Value** - Partially hidden (e.g., `sk_test_****...****abcd`)
-- **Created Date** - When generated
-- **Last Used** - Most recent usage
+
+<div className="full-width-table two-column" style={{ gridTemplateColumns: '1fr 3fr' }}>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Field</div>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Description</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Key Name</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Descriptive identifier</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Key Value</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Partially hidden (e.g., `sk_test_****...****abcd`)</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Created Date</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>When generated</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Last Used</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px' }}>Most recent usage</div>
+</div>
 
 **Available Actions:**
-- **View Details** - See usage statistics
-- **Revoke** - Immediately disable the key
-- **Delete** - Remove the API key permanently
+
+<div className="full-width-table two-column" style={{ gridTemplateColumns: '1fr 3fr' }}>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Action</div>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Description</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>View Details</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>See usage statistics</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Revoke</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Immediately disable the key</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Delete</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px' }}>Remove the API key permanently</div>
+</div>
 
 ## Viewing MCP Test Results
 
@@ -37,41 +58,47 @@ When you run tests through MCP Server in your IDE, view the results in your Web 
 ### Accessing MCP Results
 
 1. **Navigate to MCP Tests**
-   - Go to TESTING → MCP Tests
+   - Go to `TESTING > MCP Tests`
    - View all tests executed through MCP Server
 
 2. **Test Information Displayed**
-   - **Test Name** - Description of the executed test
-   - **Execution Time** - When the test was run
-   - **Duration** - Test execution time
-   - **Status** - Passed, Failed, or In Progress
-   - **Test Type** - Frontend, Backend, or Mixed
+
+<div className="full-width-table two-column" style={{ gridTemplateColumns: '1fr 3fr' }}>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Field</div>
+  <div className="table-header" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Description</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Test Name</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Description of the executed test</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Execution Time</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>When the test was run</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Duration</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Test execution time</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)', fontWeight: 'bold' }}>Status</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', borderBottom: '1px solid var(--table-border-color, #e5e7eb)' }}>Passed, Failed, or In Progress</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px', fontWeight: 'bold' }}>Test Type</div>
+  <div className="table-cell" style={{ padding: '6px', fontSize: '14px' }}>Frontend, Backend, or Mixed</div>
+</div>
 
 ### Test Reports
 
-Click on any test result to view:
-- Detailed test execution logs
-- Individual test case results
-- Error messages and debugging information
-- Performance metrics
+Click on any test result to view **detailed test execution logs**, **individual test case results**, **error messages and debugging information**, and **performance metrics**.
+<Card title="View Example Test Report" icon="file" href="../mcp/examples#test-report-example">
+  Click to see a detailed example of TestSprite test reports with execution logs and performance metrics.
+</Card>
 
-## MCP Server Setup
+## Next Steps
+<Info>Your API key is used in the MCP Server configuration to authenticate with TestSprite's testing engine.</Info>
 
-**For detailed MCP Server installation and configuration:**
-- See our comprehensive [MCP Server documentation](/mcp)
-- Follow the step-by-step [installation guide](/mcp/installation)
-- Review [workflow examples](/mcp/workflow)
-
-**Quick Reference:**
-Your API key is used in the MCP Server configuration to authenticate with TestSprite's testing engine.
-
----
-
-## Getting Started
-
-1. **Generate API Key** - Create your first API key in Settings
-2. **Install MCP Server** - Follow our [MCP setup guide](/mcp)
-3. **Start Testing** - Use MCP commands in your IDE
-4. **View Results** - Check test results in the Web Portal
-
-[Generate API Key →](https://www.testsprite.com/dashboard/settings/apikey) 
+<CardGroup cols={2}>
+  <Card title="Start Your First Test" icon="flag-checkered" href="../mcp/first-test">
+    Get hands-on experience with TestSprite MCP
+  </Card>
+  <Card title="MCP Server Documentation" icon="microchip" href="../mcp/overview">
+    Complete TestSprite MCP Server guide
+  </Card>
+  <Card title="Installation Guide" icon="download" href="../mcp/installation">
+    Step-by-step setup instructions
+  </Card>
+  <Card title="Workflow Examples" icon="route" href="../mcp/workflow">
+    Learn TestSprite MCP Server workflows
+  </Card>
+</CardGroup>
