--- a/web-portal/api-testing.mdx
+++ b/web-portal/api-testing.mdx
@@ -1,98 +1,180 @@
+
 # Back-End (APIs) Testing
 
 ## Overview
 
-Welcome to TestSprite's back-end testing feature! Our goal is to simplify API testing and help you efficiently cover a wide range of scenarios. With TestSprite, you can easily perform end-to-end tests for your RESTful APIs, ensuring reliability and performance without the usual headaches. Whether you are a small team or an enterprise, our tool is designed to meet your testing needs with speed and precision.
+
+Simplify API testing with TestSprite's AI-powered backend testing. Perform comprehensive end-to-end tests for RESTful APIs with speed and precision—designed for teams of any size.
+
+
+---
 
 ### Key Features
 
-- **Fast and Easy Setup**: Get started quickly with minimal documentation—no need for extensive prompts or full codebases.
-- **Comprehensive Test Types**: Supports a wide range of tests, including functional testing, error handling, security, authorization & authentication, boundary testing, load & performance testing, edge case testing, response content validation, and concurrency testing.
-- **Concise Reports**: Delivers detailed outputs, including error types, potential root causes, and recommended fixes.
-- **Natural Language Feedback**: Easily provide feedback on test results and adjustments using natural language.
+<CardGroup cols={2}>
+  <Card title="Fast Setup" icon="rocket">
+    Get started quickly with minimal documentation—no extensive prompts or full codebases needed
+  </Card>
+  <Card title="Comprehensive Testing" icon="shield-check">
+    Covers functional, security, performance, error handling, and edge case testing automatically
+  </Card>
+</CardGroup>
+
+<CardGroup cols={2}>
+  <Card title="Smart Reports" icon="chart-bar">
+    Detailed outputs with error types, root causes, and recommended fixes
+  </Card>
+  <Card title="Natural Language" icon="message">
+    Provide feedback and adjustments using plain English—no technical commands required
+  </Card>
+</CardGroup>
+
+---
 
 ## Getting Started
 
 To begin using TestSprite for back-end testing, follow these steps:
 
+
 ### Step 1: Set Up Your API Testing Environment
 
-1. Navigate to https://www.testsprite.com/dashboard/testing, click the **Create a Test** button on your **Home** page, or select the **New Test** tab from the left sidebar.
-2. Enter a name for your project. Once saved, you'll be automatically directed to the **Backend Testing** step.
-3. Provide the necessary details about your APIs. You can also include additional instructions in natural language to help guide how our AI should test your APIs.
-4. If applicable, <span style={{ color: "#10A363" }}> **upload any relevant API documentation**</span> to help us better understand and test your APIs.
+<Steps>
+  <Step title="Create New Test">
+    Navigate to [TestSprite Dashboard](https://www.testsprite.com/dashboard/testing) and click **Create a Test** or select **New Test** from the sidebar
+  </Step>
+  <Step title="Name Your Project">
+    Enter a project name - you'll be automatically directed to Backend Testing
+  </Step>
+  <Step title="Provide API Details">
+    Add your API information and natural language instructions to guide our AI testing
+  </Step>
+  <Step title="Upload Documentation (Optional)">
+    <span style={{ color: "#10A363" }}> **Upload API documentation**</span> to help our AI better understand your APIs
+  </Step>
+</Steps>
 
 ![Backend Feature 0](/images/backend-feature-0.svg)
 
-> Example API documentation: [https://docs.genrex.com/docs/1.0/api-reference/request-generation](https://docs.genrex.com/docs/1.0/api-reference/request-generation)
+<Accordion title="Example API Documentation">
+[GenRex API Reference](https://docs.genrex.com/docs/1.0/api-reference/request-generation) - Shows how comprehensive API docs help our AI generate better tests
+</Accordion>
+
 
 ---
 
 ### Step 2: Review Generated Test Plans
 
-1. **Review AI Generated Test Plan**:  
+<Steps>
+  <Step title="Review AI Generated Test Plan">
+    Our AI creates a comprehensive test plan covering multiple test types for your APIs
+  </Step>
+  <Step title="Select Test Categories">
+    Choose which test categories and cases to implement, or select all for comprehensive coverage
+  </Step>
+</Steps>
 
-Our AI testing agent generates a comprehensive test plan that includes a variety of test types, such as:
 
-- Functional Testing
-- Error Handling Testing
-- Security Testing
-- Authorization & Authentication Testing
-- Boundary Testing
-- Load & Performance Testing
-- Edge Case Testing
-- Response Content Testing
-- Concurrency Testing
-- And more...
+**AI generates these test types automatically:**
 
-You can expand each test type to view the detailed scenarios generated specifically for your application. Feel free to modify any of the content directly within the table to better suit your specific testing needs.
+<CardGroup cols={3}>
+  <Card title="Core Testing">
+    Functional testing, error handling, and response content validation
+  </Card>
+  <Card title="Security & Auth">
+    Security testing, authorization, authentication, and boundary testing
+  </Card>
+  <Card title="Performance">
+    Load testing, performance analysis, edge cases, and concurrency testing
+  </Card>
+</CardGroup>
+
+<Info>
+You can expand each test type to view detailed scenarios and modify content directly to suit your specific needs.
+</Info>
 
 ![Backend Feature 1](/images/backend-feature-1.svg)
 
-2. **Select Test Categories and Cases**:  
-Based on your needs, you can select the test categories and cases you’d like the AI to implement and execute for your APIs. You also have the option to manually add test cases using natural language. For best results, we recommend selecting all available test cases to ensure comprehensive coverage of your software.
+<Tip>
+**Best practice:** Select all available test cases to ensure comprehensive coverage. You can also add custom test cases using natural language.
+</Tip>
+
 
 ---
 
 ### Step 3: Run Your Tests
 
-1. Click **Next** to initiate the execution of your selected test plan.
-2. TestSprite will automatically generate the required test code, execute them, and analyze the results.
+<Steps>
+  <Step title="Initiate Test Execution">
+    Click **Next** to start running your selected test plan
+  </Step>
+  <Step title="AI Generates & Executes">
+    TestSprite automatically generates test code, executes tests, and analyzes results
+  </Step>
+</Steps>
+
 
 ---
 
 ### Step 4: Review Test Results
 
-After running your tests, TestSprite displays a detailed execution report filled with insights and actionable recommendations to help you refine your software. You can also interact with our integrated chatbot to provide feedback, request adjustments to your test code, or ask any questions about the results.
+<Steps>
+  <Step title="View Execution Report">
+    TestSprite displays detailed insights and actionable recommendations to refine your software
+  </Step>
+  <Step title="Interact with AI Chatbot">
+    Provide feedback, request adjustments, or ask questions about test results
+  </Step>
+</Steps>
 
-Each failed test case includes a **Detailed Analysis** section with four key tabs that offer deeper insights:
 
-- **Error**: A clear description of the issue encountered during the test, helping you understand what went wrong.
-- **Trace**: A full code stack traceback of the error, allowing you to see exactly where and how the issue occurred.
-- **Cause**: A thorough analysis of potential causes for the failure, using AI to identify root causes and contributing factors.
-- **Fix**: AI-generated suggestions for resolving the issue, including code snippets or configuration adjustments to help you quickly address the problem.
+**Detailed Analysis for Failed Tests:**
+
+<CardGroup cols={2}>
+  <Card title="Error & Trace" icon="magnifying-glass">
+    Clear issue description and full code stack traceback showing exactly where problems occurred
+  </Card>
+  <Card title="Cause & Fix" icon="wrench">
+    AI-powered root cause analysis with suggested solutions and code snippets for quick resolution
+  </Card>
+</CardGroup>
 
 ![Backend Feature 2](/images/backend-feature-2.svg)
+
+
+---
 
 ## Advanced Configuration
 
 ### Using Natural Language for Questions and Test Adjustments
 
-You can ask questions about the current test cases or suggest adjustments using natural language—no specific format required. For example:
+<Info>
+Ask questions or suggest test adjustments using natural language—no specific format required.
+</Info>
+
 
 ![Backend Feature 3](/images/backend-feature-3.svg)
 
+<Accordion title="Example Natural Language Request">
 ```plaintext
 "Test POST /orders with invalid parameters and expect a 400 error code."
 ```
 
-TestSprite will automatically interpret and update the corresponding test case, making the testing process smoother and more efficient.
+TestSprite automatically interprets and updates the corresponding test case, making testing smoother and more efficient.
+</Accordion>
+
+
+---
 
 ## Examples
 
-### Example 1: Generated Test Code
+See what TestSprite's AI generates for your APIs:
 
-```python
+
+<Accordion title="Example: Security Test for API Signature Validation">
+TestSprite automatically generates comprehensive security tests like this one that validates API signature handling:
+
+
+```python filename="test_api_security.py" copy
 import hashlib
 import hmac
 import json
@@ -145,5 +227,8 @@ def test_invalid_gx_signature():
     assert response_data["statusCode"] == 400, f"Expected statusCode 400, got {response_data['statusCode']}"
 
 test_invalid_gx_signature()
-
 ```
+
+
+This test validates that your API properly rejects requests with invalid signatures, ensuring security integrity.
+</Accordion>
