--- a/web-portal/ui-testing.mdx
+++ b/web-portal/ui-testing.mdx
@@ -2,116 +2,188 @@
 
 ## Overview
 
-TestSprite provides a fast, user-friendly solution for automating web application testing. With just a few clicks, you can run tests on various user interactions to ensure your UI performs as expected across different scenarios. It's the perfect platform for small teams seeking reliable, automated results without the complexity of manual setup.
+
+Automate web application testing with TestSprite's AI-powered UI testing. Run comprehensive user interaction tests across different scenarios with just a few clicks—designed for teams seeking reliable results without manual complexity.
+
 
 ---
 
 ### Key Features
 
-- **Fast Setup**  
-Get started in <span style={{ color: "#10A363" }}> **minutes**</span> with minimal configuration. Just provide your website URLs, and TestSprite's <span style={{ color: "#10A363" }}> **AI agent**</span> takes it from there—so you can skip the manual setup and focus on what matters most: shipping great software.
+<CardGroup cols={2}>
+  <Card title="Fast Setup" icon="rocket">
+    Get started in minutes with minimal configuration. Just provide your website URLs and let our AI agent handle the rest
+  </Card>
+  <Card title="AI-Generated Test Cases" icon="brain">
+    Dynamically creates intelligent test plans tailored to your product's content and edge cases with full customization control
+  </Card>
+</CardGroup>
 
-- **Customizable, AI-Generated Test Cases**  
-TestSprite dynamically creates <span style={{ color: "#10A363" }}> **intelligent, real-time test plans**</span> tailored to your product's actual content and edge cases. You can easily <span style={{ color: "#10A363" }}> **customize**</span> the prompts, adjust scenarios, or manually describe any additional flows you want covered. If our AI agent misses anything, you're always in control.
+<CardGroup cols={2}>
+  <Card title="Smart Video Playback" icon="play">
+    Every interaction is recorded and replayable—see exactly how tests run and spot UI issues visually
+  </Card>
+  <Card title="Live Test Preview" icon="eye">
+    Watch test execution unfold in real-time to catch potential issues instantly
+  </Card>
+</CardGroup>
 
-- **End-to-End Visibility** with <span style={{ color: "#10A363" }}> **Smart Video Playback**</span>  
-Every step taken by the AI agent—every button click, form fill, mouse action—is <span style={{ color: "#10A363" }}> **recorded and replayable**</span>. This makes it easy to understand exactly how the test ran, spot UI issues visually, and validate the testing behavior from start to finish.
+<CardGroup cols={2}>
+  <Card title="Actionable Reports" icon="chart-bar">
+    Detailed execution reports with error analysis, root cause identification, and AI-suggested fixes
+  </Card>
+  <Card title="Natural Language Control" icon="message">
+    Refine tests using plain English—no code required for tweaking scenarios or adding edge cases
+  </Card>
+</CardGroup>
 
-- **Web-Based Test Execution Preview**  
-Watch test execution unfold <span style={{ color: "#10A363" }}> **live in the browser**</span>. Monitor interactions in real time to catch potential issues instantly, and understand exactly how your users will experience the application.
+<Info>
+**Bonus:** TestSprite automatically generates reusable Python + Playwright test code perfect for CI/CD pipelines and regression testing.
+</Info>
 
-- **Actionable, Detailed Reports**  
-Each test run comes with an <span style={{ color: "#10A363" }}> **execution report**</span> including error message, root cause analysis, and suggested fixes. Our AI not only flags issues but also helps you resolve them faster with meaningful insights.
-
-- **Natural Language Feedback Loop**  
-Refine tests directly through <span style={{ color: "#10A363" }}> **natural language**</span>. Want to tweak a scenario, add an edge case, or rerun a modified flow? Just tell the AI—no code required. You can even regenerate test cases instantly based on new test prompts.
-
-- **Generated Test Code** (Python + Playwright)  
-Alongside visual testing, TestSprite automatically generates <span style={{ color: "#10A363" }}> **reusable test code**</span> (defaulting to Python with Playwright). It's perfect for future regression testing, CI/CD pipelines, or for developers who want full transparency into what's being run under the hood.
+---
 
 ## Getting Started
 
+
 To begin using TestSprite for front-end testing, follow these steps:
+
 
 ### Step 1: Set Up Your Front-End Testing Environment
 
-1. **Log in** to your TestSprite account and go to the **Home** section.
-2. Click on **Create a Test**. Once you've completed the backend (API) testing step, you'll be automatically guided to the front-end (UI) Testing step. You can also choose to <span style={{ color: "#10A363" }}> **skip**</span> backend testing if you prefer to start with the front end.
-3. Enter the **Web Application Details**:
-   - Web application starting URL.
-   - Any authentication credentials if needed (e.g., username, password).
+<Steps>
+  <Step title="Access TestSprite Dashboard">
+    Log in to your TestSprite account and click **Create a Test** from the Home section
+  </Step>
+  <Step title="Enter Application Details">
+    Provide your web application URL and optional authentication credentials
+  </Step>
+  <Step title="Add Testing URLs">
+    Include additional pages you want to test within the same flow
+  </Step>
+  <Step title="Special Instructions (Optional)">
+    Add specific testing requirements to help AI generate more accurate test plans
+  </Step>
+</Steps>
 
-    ```json
-    {
-      "Web application starting URL": "https://www.example.com",
-      "Web application sign in username/email (optional)": "user@example.com",
-      "Web application sign in password (optional)": "password123"
-    }
-    ```
-4. **Add more URLs**: if you have multiple pages to test within the same flow.
-5. **Add Special Testing Instructions** (Optional): 
-If you have specific testing requirements or additional context that could help the AI generate a more accurate initial test plan, feel free to include them here. This step is optional but can enhance the quality and relevance of your tests.
+
+<Accordion title="Example Application Configuration">
+```json
+{
+  "Web application starting URL": "https://www.example.com",
+  "Web application sign in username/email (optional)": "user@example.com", 
+  "Web application sign in password (optional)": "password123"
+}
+```
+</Accordion>
 
 ![Frontend Feature 1](/images/fr-step1.svg)
+
 
 ---
 
 ### Step 2: Configure Test Plans
 
-1. **Review the Draft Test Plan**:  
-   **Review** the draft test plan *(Our AI may further refine this after performing a deeper real-time analysis of your application during test case execution)* generated for your application. It contains a set of end-to-end test scenarios specifically tailored to the UI you've provided. A sample draft might look like this:
+<Steps>
+  <Step title="Review AI-Generated Test Plan">
+    Review the draft test plan tailored to your UI with end-to-end scenarios
+  </Step>
+  <Step title="Select & Modify Scenarios">
+    Choose test scenarios to execute and modify descriptions to match your requirements
+  </Step>
+</Steps>
 
->   - **Test the 'Log In' Link Functionality**:
->     Ensure that the 'Log In' link directs users to the correct login page, triggering authentication flows properly and guiding users to their dashboard or profile page after a successful login.
->
->   - **Test the 'Add to Cart' Button in Product Listings**:
->     Verify that clicking the 'Add to Cart' button accurately adds the selected product to the user's shopping cart, updates the cart count, and displays confirmation messages as expected.
->
->   - **Test the 'Close Banner' Button Functionality**:
->     Ensure that clicking the 'Close' button on pop-up banners, promotional messages, or notifications dismisses the banner correctly, without disrupting other page elements.
->
->   - **Verify Link Redirection for Page Load Accuracy**:
->     Confirm that navigation links redirect users to the intended pages, with appropriate loading times and accurate content display, ensuring a smooth browsing experience across different sections of your website.
 
-2. **<span style={{ color: "#10A363" }}> **Select & Modify**</span> Scenarios to Execute**:  
-Based on your needs, select the test scenarios you'd like the AI to implement and execute for your frontend UI components. You can also <span style={{ color: "#10A363" }}> **modify any Test Description directly**</span> to better align with your specific requirements or improve accuracy.
+<Accordion title="Example Test Scenarios Generated by AI">
+- **Test the 'Log In' Link Functionality**  
+  Ensure login link directs users to correct page and handles authentication properly
+
+- **Test the 'Add to Cart' Button**  
+  Verify cart button adds products, updates cart count, and shows confirmation messages
+
+- **Test the 'Close Banner' Button**  
+  Ensure banner close buttons dismiss properly without disrupting other elements
+
+- **Verify Link Redirection Accuracy**  
+  Confirm navigation links redirect to intended pages with proper loading and content
+</Accordion>
+
+<Info>
+Our AI may further refine test plans after performing real-time analysis of your application during execution.
+</Info>
 
 ![Frontend Feature 2](/images/fr-step2.svg)
+
 
 ---
 
 ### Step 3: Run Your Tests
 
-1. Click **Next** to start generating and executing your selected test cases.
-2. Monitor progress through the **Web Preview** feature, which displays the tested page as actions are performed.
-3. TestSprite will automatically validate UI interactions and generate a detailed result upon completion.
+<Steps>
+  <Step title="Start Test Execution">
+    Click **Next** to begin generating and executing your selected test cases
+  </Step>
+  <Step title="Monitor Web Preview">
+    Watch real-time test execution through the Web Preview feature
+  </Step>
+  <Step title="Automatic Validation">
+    TestSprite validates UI interactions and generates detailed results automatically
+  </Step>
+</Steps>
+
 
 ---
 
 ### Step 4: Review Test Results
 
-After your test is complete, TestSprite provides a detailed report, for example:
+<Steps>
+  <Step title="Access Detailed Report">
+    TestSprite provides comprehensive test results with visual insights
+  </Step>
+  <Step title="Analyze Results">
+    Review test outcomes, errors, and performance metrics for your UI
+  </Step>
+</Steps>
 
-> **Amazon landing page testing results**:
->
-> ![Frontend Feature 3](/images/fr-step3.svg)
+
+<Accordion title="Example Test Results">
+**Amazon landing page testing results:**
+
+![Frontend Feature 3](/images/fr-step3.svg)
+</Accordion>
+
+
+---
 
 ## Advanced Features
 
 ### Web Preview for Context
 
-TestSprite includes a **Web Preview** feature that allows you to visualize the testing process:
 
-- Watch as each element is interacted with on your web page.
-- Understand how the page responds to various actions.
-- Quickly identify UI issues that might otherwise be missed.
+TestSprite includes a Web Preview feature that allows you to visualize the testing process:
+
+- Watch as each element is interacted with on your web page
+- Understand how the page responds to various actions  
+- Quickly identify UI issues that might otherwise be missed
+
 
 ### Using Natural Language to Refine and Regenerate Tests
 
-TestSprite lets you easily refine or modify tests using natural language—no technical configuration required. Simply  <span style={{ color: "#10A363" }}> update the **Test Prompt**</span> to better reflect your intended behavior. For example:
+Refine tests using plain English—no technical configuration required.
 
-> "Ensure that the 'Sign In' link directs users to the correct sign in page, triggering authemtication flows properly and guiding users to their dashboard or profile page after a successful login."
 
-TestSprite interprets the **new Test Prompt** and adjusts the test accordingly, making it easier for you to refine test cases without needing to dive into complex configurations.
+**How it works:**
+1. Edit the test description in plain language
+2. TestSprite automatically regenerates the test
+
+
+**Example:**
+
+```
+Original: "Test login functionality"
+
+Refined: "Ensure the Sign In link directs users to the login page and guides them to their dashboard after successful authentication."
+```
+
 
 ![Frontend Feature 4](/images/fr-step4.svg)
