--- a/web-portal/monitoring.mdx
+++ b/web-portal/monitoring.mdx
@@ -10,9 +10,20 @@ The Monitoring feature allows you to schedule **automated test executions** at r
 
 ## Key Benefits
 
-- **Continuous Quality Assurance** - Automatically detect issues before they reach users. **24/7 monitoring** and regression detection without manual effort.
-- **Flexible Scheduling** - **Recurring test executions** with multiple scheduling options. Monitor run times and pause/modify schedules as needed.
-- **Proactive Issue Detection** - **Immediate notifications** when tests fail. Track trends and identify performance degradation over time.
+<CardGroup cols={2}>
+  <Card title="Continuous Quality Assurance" icon="shield-check">
+    Automatically detect issues before they reach users. **24/7 monitoring** and regression detection without manual effort.
+  </Card>
+  <Card title="Flexible Scheduling" icon="calendar-days">
+    **Recurring test executions** with multiple scheduling options. Monitor run times and pause/modify schedules as needed.
+  </Card>
+</CardGroup>
+
+<CardGroup cols={1}>
+  <Card title="Proactive Issue Detection" icon="magnifying-glass">
+    **Immediate notifications** when tests fail. Track trends and identify performance degradation over time.
+  </Card>
+</CardGroup>
 
 ## Getting Started with Monitoring
 
