--- a/web-portal/ui-testing.mdx
+++ b/web-portal/ui-testing.mdx
@@ -1,11 +1,7 @@
-# Front-End (UI) Testing
-
-## Overview
-
-
-Automate web application testing with TestSprite's AI-powered UI testing. Run comprehensive user interaction tests across different scenarios with just a few clicks—designed for teams seeking reliable results without manual complexity.
-
-
+---
+title: "Front-End (UI) Testing"
+description: "AI-powered UI testing for web applications with comprehensive user interaction tests."
+icon: "window-maximize"
 ---
 
 ### Key Features
@@ -41,7 +37,6 @@ Automate web application testing with TestSprite's AI-powered UI testing. Run co
 **Bonus:** TestSprite automatically generates reusable Python + Playwright test code perfect for CI/CD pipelines and regression testing.
 </Info>
 
----
 
 ## Getting Started
 
@@ -50,7 +45,10 @@ To begin using TestSprite for front-end testing, follow these steps:
 
 
 ### Step 1: Set Up Your Front-End Testing Environment
-
+<br />
+<Frame>
+![Frontend Feature 1](/images/fr-step1.svg)
+</Frame>
 <Steps>
   <Step title="Access TestSprite Dashboard">
     Log in to your TestSprite account and click **Create a Test** from the Home section
@@ -77,12 +75,11 @@ To begin using TestSprite for front-end testing, follow these steps:
 ```
 </Accordion>
 
-![Frontend Feature 1](/images/fr-step1.svg)
-
-
----
-
 ### Step 2: Configure Test Plans
+<br />
+<Frame>
+![Frontend Feature 2](/images/fr-step2.svg)
+</Frame>
 
 <Steps>
   <Step title="Review AI-Generated Test Plan">
@@ -112,11 +109,6 @@ To begin using TestSprite for front-end testing, follow these steps:
 Our AI may further refine test plans after performing real-time analysis of your application during execution.
 </Info>
 
-![Frontend Feature 2](/images/fr-step2.svg)
-
-
----
-
 ### Step 3: Run Your Tests
 
 <Steps>
@@ -132,9 +124,13 @@ Our AI may further refine test plans after performing real-time analysis of your
 </Steps>
 
 
----
 
 ### Step 4: Review Test Results
+
+<br />
+<Frame>
+![Frontend Feature 3](/images/fr-step3.svg)
+</Frame>
 
 <Steps>
   <Step title="Access Detailed Report">
@@ -146,14 +142,6 @@ Our AI may further refine test plans after performing real-time analysis of your
 </Steps>
 
 
-<Accordion title="Example Test Results">
-**Amazon landing page testing results:**
-
-![Frontend Feature 3](/images/fr-step3.svg)
-</Accordion>
-
-
----
 
 ## Advanced Features
 
@@ -171,6 +159,10 @@ TestSprite includes a Web Preview feature that allows you to visualize the testi
 
 Refine tests using plain English—no technical configuration required.
 
+<Frame>
+![Frontend Feature 4](/images/fr-step4.svg)
+</Frame>
+
 
 **How it works:**
 1. Edit the test description in plain language
@@ -184,6 +176,3 @@ Original: "Test login functionality"
 
 Refined: "Ensure the Sign In link directs users to the login page and guides them to their dashboard after successful authentication."
 ```
-
-
-![Frontend Feature 4](/images/fr-step4.svg)
