Update introduction and MCP examples documentation
- Improve introduction content and formatting
- Enhance MCP examples with better structure and clarity

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -11,17 +11,15 @@ Whether you're a solo developer or part of a team, TestSprite adapts to your wor
 Try our [free community version <Icon icon="arrow-up-right-from-square" size={12} />](https://www.testsprite.com/auth/cognito/sign-in). This documentation has everything you need to get started.
 
 <Frame>
-  <iframe 
-    width="100%" 
-    height="400" 
-    src="https://www.youtube.com/embed/2NaxnRnQqIU" 
-    frameBorder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowFullScreen
-    style={{ borderRadius: '8px'}}
-  ></iframe>
+<iframe
+  className="w-full aspect-video rounded-xl"
+  height="400" 
+  src="https://www.youtube.com/embed/2NaxnRnQqIU"
+  frameBorder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
 </Frame>
-<br />
 
 <Columns cols={3}>
   <Card title="Quick Start" icon="rocket" href="/get-started/Quick Start">
