--- a/mcp/examples.mdx
+++ b/mcp/examples.mdx
@@ -9,17 +9,15 @@ icon: "layer-group"
 Watch TestSprite MCP Server in action with this complete workflow demonstration:
 
 <Frame>
-  <iframe 
-    width="100%" 
-    height="400" 
-    src="https://www.youtube.com/embed/yLQdORqPl3s" 
-    frameBorder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowFullScreen
-    style={{ borderRadius: '8px'}}
-  ></iframe>
+<iframe
+  className="w-full aspect-video rounded-xl"
+  height="400" 
+  src="https://www.youtube.com/embed/yLQdORqPl3s"
+  frameBorder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
 </Frame>
-<br />
 
 **What you'll see in the demo:**
 - Set up TestSprite MCP Server **directly inside Cursor**.
