Update documentation structure and content
- Update docs.json navigation structure
- Enhance MCP server documentation (overview, tools, workflow, first-test)
- Improve web portal documentation (overview, api-keys, api-testing)
- Refine content formatting and user experience

--- a/mcp/tools.mdx
+++ b/mcp/tools.mdx
@@ -330,7 +330,7 @@ Now that you understand the MCP tools reference, here's what to do next:
     Understand the complete process
   </Card>
   
-  <Card title="Troubleshooting" href="../installation-issues">
+  <Card title="Troubleshooting" href="../troubleshooting/installation-issues">
     Common issues and solutions
   </Card>
   
