--- a/mcp/workflow.mdx
+++ b/mcp/workflow.mdx
@@ -402,7 +402,7 @@ Now that you understand the complete workflow, explore:
   <Card title="View Examples" href="/mcp/examples">
   See real-world implementations
   </Card>
-  <Card title="Troubleshooting" href="/mcp/troubleshooting">
+  <Card title="Troubleshooting" href="/troubleshooting/installation-issues">
   Solve common issues
   </Card>
 </Columns>
