--- a/web-portal/api-keys.mdx
+++ b/web-portal/api-keys.mdx
@@ -89,16 +89,16 @@ Click on any test result to view **detailed test execution logs**, **individual 
 <Info>Your API key is used in the MCP Server configuration to authenticate with TestSprite's testing engine.</Info>
 
 <CardGroup cols={2}>
-  <Card title="Start Your First Test" icon="flag-checkered" href="../mcp/first-test">
+  <Card title="Start Your First Test" href="../mcp/first-test">
     Get hands-on experience with TestSprite MCP
   </Card>
-  <Card title="MCP Server Documentation" icon="microchip" href="../mcp/overview">
+  <Card title="MCP Server Documentation" href="../mcp/overview">
     Complete TestSprite MCP Server guide
   </Card>
-  <Card title="Installation Guide" icon="download" href="../mcp/installation">
+  <Card title="Installation Guide" href="../mcp/installation">
     Step-by-step setup instructions
   </Card>
-  <Card title="Workflow Examples" icon="route" href="../mcp/workflow">
+  <Card title="Workflow Examples" href="../mcp/workflow">
     Learn TestSprite MCP Server workflows
   </Card>
 </CardGroup>
