--- a/mcp/first-test.mdx
+++ b/mcp/first-test.mdx
@@ -179,16 +179,16 @@ The AI will analyze failing tests, identify problematic code sections, apply tar
 **Congratulations!** You've successfully run your first automated test with TestSprite MCP Server.
 
 <Columns cols={2}>
-  <Card title="Complete Testing Workflow" href="/workflow">
+  <Card title="Complete Testing Workflow" href="../mcp/workflow">
   Understand the full process
   </Card>
-  <Card title="View Examples" href="/examples">
+  <Card title="View Examples" href="../mcp/examples">
   See real-world use cases
   </Card>
   <Card title="Join Discord" arrow="true" href="https://discord.com/invite/GXWFjCe4an">
   Get help and share experiences
   </Card>
-  <Card title="Contribute on Github" arrow="true" href="https://github.com/testsprite/testsprite-mcp">
+  <Card title="Contribute on Github" arrow="true" href="https://github.com/TestSprite/Docs">
   Contribute and report issues
   </Card>
 </Columns>
