--- a/web-portal/overview.mdx
+++ b/web-portal/overview.mdx
@@ -7,17 +7,15 @@ icon: "book"
 ## Video Introduction
 
 <Frame>
-  <iframe 
-    width="100%" 
-    height="400" 
-    src="https://www.youtube.com/embed/3mU5BJU_VHk" 
-    frameBorder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowFullScreen
-    style={{ borderRadius: '8px'}}
-  ></iframe>
+<iframe
+  className="w-full aspect-video rounded-xl"
+  height="400" 
+  src="https://www.youtube.com/embed/3mU5BJU_VHk"
+  frameBorder="0"
+  allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+></iframe>
 </Frame>
-<br />
 
 ## Step 1: Customer Input
 
