Update supported IDEs in installation documentation
- Add Trae and Claude Code to supported IDE list
- Update IDE support description for TestSprite MCP Server
- Clarify installation process across multiple platforms

--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -14,7 +14,7 @@ Before installing TestSprite MCP Server, ensure you have:
 
 <AccordionGroup>
   <Accordion title="Which IDEs and editors does TestSprite support?">
-    TestSprite supports **Visual Studio Code**, **WebStorm**, **IntelliJ IDEA**, **Sublime Text**, and **Atom** across Windows, macOS, and Linux. Simply install our plugin from your IDE's marketplace to get started.
+    TestSprite supports **Trae**, **Cursor**, **Claude Code**, **Windsurf**, **VS Code**, and **GitHub Copilot**. Simply install our MCP Server get started.
   </Accordion>
 
   <Accordion title="How do I check my Node.js version?">
