Set dark mode as default and update installation docs
- Configure modeToggle to default to dark mode in docs.json
- Update installation documentation with additional content
- Add trae.png image asset for documentation

--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -37,14 +37,30 @@ First, you'll need a TestSprite API key for any installation method:
 3. Click **"New API Key"**
 4. **Copy** your API key (you'll need it for installation)
 
-## One-Click Installation (Cursor)
+## One-Click installation
 
+<Tabs>
+<Tab title="Trae">
+
+1. Get your [**API key**](#get-your-api-key). 
+2. In Trae, navigate to `AI Sidebar > AI Management`.
+  <Frame>
+    <img src="../images/trae.png" alt="Cursor Success" style={{ width: '100%', height: 'auto', borderRadius: '8px' }} />
+  </Frame>
+3. Select `MCP > Add > Add from Marketplace`.
+4. Search for **TestSprite** and add to your MCP list.
+5. **Enter your API key** in Trae.
+6. Hit **Confirm** and start testing.
+</Tab>
+<Tab title="Cursor">
 The easiest way to install TestSprite MCP Server in Cursor:
 
 1. Get your [**API key**](#get-your-api-key). 
-2. Click this [one-click install link  <Icon icon="arrow-up-right-from-square" size={12} />](cursor://anysphere.cursor-deeplink/mcp/install?name=TestSprite&config=eyJjb21tYW5kIjoibnB4IEB0ZXN0c3ByaXRlL3Rlc3RzcHJpdGUtbWNwQGxhdGVzdCIsImVudiI6eyJBUElfS0VZIjoiIn19)
-3. **Enter your API key** in Cursor
+2. Click this [one-click install link  <Icon icon="arrow-up-right-from-square" size={12} />](cursor://anysphere.cursor-deeplink/mcp/install?name=TestSprite&config=eyJjb21tYW5kIjoibnB4IEB0ZXN0c3ByaXRlL3Rlc3RzcHJpdGUtbWNwQGxhdGVzdCIsImVudiI6eyJBUElfS0VZIjoiIn19).
+3. **Enter your API key** in Cursor.
 4. Start testing.
+</Tab>
+</Tabs>
 
 ## Manual Installation
 
