Update documentation configuration and first test guide
- Update docs.json navigation structure
- Enhance first test documentation with improved content and formatting

--- a/mcp/first-test.mdx
+++ b/mcp/first-test.mdx
@@ -188,7 +188,7 @@ The AI will analyze failing tests, identify problematic code sections, apply tar
   <Card title="Join Discord" arrow="true" href="https://discord.com/invite/GXWFjCe4an">
   Get help and share experiences
   </Card>
-  <Card title="Contribute on Github" arrow="true" href="https://github.com/TestSprite/Docs">
+  <Card title="Contribute on Github" arrow="true" href="https://github.com/wangy44624/docs">
   Contribute and report issues
   </Card>
 </Columns>
