Update installation documentation
- Improve installation guide content and formatting
- Enhance user experience and clarity

--- a/mcp/installation.mdx
+++ b/mcp/installation.mdx
@@ -28,7 +28,7 @@ Before installing TestSprite MCP Server, ensure you have:
 First, you'll need a TestSprite API key for any installation method:
 
 <Frame>
-  <img src="../images/api-key.png" alt="API Key" style={{ width: '100%', height: 'auto', borderRadius: '8px' }} />
+  <img src="../images/api-key.png"  alt="API Key" />
 </Frame>
 
 
